--- a/panels-dev/index.html
+++ b/panels-dev/index.html
@@ -9,9 +9,9 @@
   <body>
     <home-page></home-page>
 
-    <script type="module" src="src/pages/style-page.ts"></script>
-    <script type="module" src="src/pages/home-page.ts"></script>
+    <script src="src/pages/style-page.ts"></script>
+    <script src="src/pages/home-page.ts"></script>
 
-    <script type="module" src="src/components/components.ts"></script>
+    <script src="src/components/components.ts"></script>
   </body>
 </html>
