--- a/panels-dev/index.html
+++ b/panels-dev/index.html
@@ -3,7 +3,10 @@
 <html lang="en">
   <head>
     <title>Panels Dev</title>
+
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
+    <meta name="description" content="Panels Dev">
 
     <link rel="stylesheet" href="src/global.css" />
   </head>
