--- a/panels-dev/public/index.html
+++ b/panels-dev/public/index.html
@@ -17,6 +17,7 @@
   <body>
     <home-page></home-page>
 
+    <script src="../src/components/components.ts"></script>
     <script src="../src/pages/home-page.ts"></script>
   </body>
 </html>
