--- a/panels-js/public/index.html
+++ b/panels-js/public/index.html
@@ -17,7 +17,7 @@
   <body>
     <home-page></home-page>
 
-    <script src="../src/components/components.ts"></script>
+    <script src="../src/index.js"></script>
     <script src="../src/pages/home-page.ts"></script>
   </body>
 </html>
