--- a/panels-js/public/index.html
+++ b/panels-js/public/index.html
@@ -17,7 +17,9 @@
   <body>
     <home-page></home-page>
 
-    <script src="../src/index.js"></script>
-    <script src="../src/pages/home-page.ts"></script>
+    <script type="module" src="../src/components/base/panel-base.js"></script>
+    <script type="module" src="../src/components/hero/hero-1.js"></script>
+    <script type="module" src="../src/components/hero/hero-2.js"></script>
+    <script type="module" src="../src/pages/home-page.js"></script>
   </body>
 </html>
