--- a/panels-js/public/style.html
+++ b/panels-js/public/style.html
@@ -18,6 +18,6 @@
     <style-page></style-page>
 
     <script src="../src/index.js"></script>
-    <script src="../src/pages/style-page.ts"></script>
+    <script src="../src/pages/style-page.js"></script>
   </body>
 </html>
