--- a/panels-dev/public/style.html
+++ b/panels-dev/public/style.html
@@ -17,7 +17,7 @@
   <body>
     <style-page></style-page>
 
-    <script src="../src/components/components.ts"></script>
-    <script src="../src/pages/style-page.ts"></script>
+    <script type="module" src="../src/components/components.ts"></script>
+    <script type="module" src="../src/pages/style-page.ts"></script>
   </body>
 </html>
